--- a/HospitalApp-web/src/main/webapp/Episodio.xhtml
+++ b/HospitalApp-web/src/main/webapp/Episodio.xhtml
@@ -24,28 +24,42 @@
                 #{paciente.idPersona.persApematerno}  
             </p:column>
             <p:column headerText="Acción">
-                <p:commandButton update=":listaEpi" oncomplete="PF('listaEpi').show()" value="Ver" title="Ver Episodios" />
+                <p:commandButton update=":listaEpi" action="#{episodioMB.buscarEpisodios(paciente.idPaciente)}" oncomplete="PF('listaEpi').show()" value="Ver" title="Ver Episodios" />
                 <p:commandButton update=":addEpi" oncomplete="PF('addEpi').show()" icon="ui-icon-plus" title="Nuevo Episodio" >
                     <f:setPropertyActionListener target="#{episodioMB.paciente}" value="#{paciente}"/>
                 </p:commandButton>
             </p:column>
         </p:dataTable>
     </h:form>
-    <p:dialog widgetVar="addEpi" header="Nuevo episodio.">
-        <h:form id="addEpi">
+    <p:dialog id="addEpi" widgetVar="addEpi" header="Nuevo episodio.">
+        <h:form>
             <p:panelGrid columns="2">
                 <p:outputLabel value="Paciente"/>
                 <p:outputLabel value="#{episodioMB.paciente.idPersona.persNombres} #{episodioMB.paciente.idPersona.persApepaterno}"/>
                 <p:outputLabel value="Motivo episodio"/>
                 <p:inputText value="#{episodioMB.nombre}"/>
-                <p:commandButton value="Guardar" actionListener="#{episodioMB.nuevoEpisodio()}"/>
+                <p:commandButton value="Guardar" actionListener="#{episodioMB.nuevoEpisodio()}" update=":episodioClinico, :addEpi"/>
                 <p:commandButton value="Cancelar" onclick="PF('addEpi').hide()"/>
             </p:panelGrid>
         </h:form>
     </p:dialog>
-    <p:dialog widgetVar="listaEpi">
-        <h:form id="listaEpi">
-
+    <p:dialog id="listaEpi" widgetVar="listaEpi">
+        <h:form>
+            <p:dataTable value="#{episodioMB.listaEpisodios}" var="epi" emptyMessage="No se encontraron elementos que coincidan con la búsqueda" id="episodios" paginator="true" paginatorAlwaysVisible="true" rows="10" paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"  
+                         rowsPerPageTemplate="5,10,20">
+                <p:column headerText="Fecha">
+                    #{epi.fecha}
+                </p:column>
+                <p:column headerText="Nombre">
+                    #{epi.nombre}
+                </p:column>
+                <p:column headerText="Abierto">
+                    <p:selectBooleanCheckbox value="#{epi.abierto}" disabled="true"/>
+                </p:column>
+                <p:column headerText="Cerrar">
+                    <p:commandButton value="Cerrar" action="#{episodioMB.cerrarEpisodio(epi.episodioid)}" disabled="#{!epi.abierto}" update=":episodioClinico, :listaEpi"/>
+                </p:column>
+            </p:dataTable>
         </h:form>
     </p:dialog>
 </html>
